Address issue with horizontal scroll bar on Rare amber page on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -890,8 +890,6 @@ input {
     border: 1px solid black;
 }
 
-
-
 button {
     border-radius: 5px;
     border: none;
@@ -1211,28 +1209,20 @@ h3~p {
         display: block;
         align-content: center;
         font-size: .5rem;
-        margin: 8%;
-        width: 90%
+        margin: 9%;
+        width: 85%
     }
 
     .wide {
         width: 100%;
-        height: 21rem;
-        margin-left: auto;
+        height: 23.5rem;
+        margin: auto;
     }
 
     .tall {
+        width: 30rem;
         height: 30rem;
         align-items: center;
-    }
-
-    #clear_beads {
-        width: 85%;
-        height: 22rem;
-    }
-
-    #black_beads {
-        margin-left: 3rem;
     }
 
     #expensive,
@@ -1241,7 +1231,6 @@ h3~p {
         text-align: center;
         margin-bottom: 3rem;
         font-size: .7rem;
-
     }
 
     #par_text,
